// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceMembers existing members can edit when current user is manager of the space 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="open-filter-btn">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Add" invitelabel="Add members" class="oc-my-s"></invite-collaborator-form-stub>
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers filter toggles the filter on click 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <div class="oc-flex">
        <div class="oc-text-truncate space-members-filter oc-mr-s"><label for="oc-textinput-4" class="oc-label"></label>
          <div class="oc-position-relative"><input id="oc-textinput-4" aria-invalid="false" type="text" placeholder="Filter members" class="oc-text-input oc-rounded">
            <!---->
          </div>
          <!---->
        </div> <button aria-label="Close filter" type="button" class="close-filter-btn oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw">
          <oc-icon-stub name="close" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
        </button>
      </div>
    </div>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Add" invitelabel="Add members" class="oc-my-s"></invite-collaborator-form-stub>
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers invite collaborator form renders the form when the current user is a manager of the space 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="open-filter-btn">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Add" invitelabel="Add members" class="oc-my-s"></invite-collaborator-form-stub>
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;
